--- a/src/App.css
+++ b/src/App.css
@@ -12,12 +12,36 @@ body {
 
 
 
-
-/* @media  {
-    .container_Body {
-        background-image: url(./assets/bg-mobile.svg);
-        background-repeat: no-repeat;
-        width: 100%;    height: 1180px;
-        background-color: #674BB1;
+@media (max-width: 375px) {
+    .header img {
+        width: 34px;
+        height: 35px;
+        margin: 33px 0 0 29px;
     }
-}  */
+    h1 {
+        margin-top: 18px;
+        font-size: 22px;
+    }
+    .Huddle {
+        display: block;
+         margin: 61px;
+    }
+    .Huddle div img {
+        width: 297px;
+        margin-left: -20px;
+    }
+}
+
+
+
+
+
+/* @media screen (max-width: 375px ) {
+    .container_Body {
+       /*  background-image: url(./assets/bg-mobile.svg);
+        background-repeat: no-repeat;
+        width: 375px;    
+        height: 1180px;
+        background-color: #674BB1; 
+    }    
+} */
