se agrega style a modo mobile

--- a/src/App.css
+++ b/src/App.css
@@ -13,23 +13,51 @@ body {
 
 
 @media (max-width: 375px) {
-    .header img {
-        width: 34px;
-        height: 35px;
-        margin: 33px 0 0 29px;
+    body {
+        background-image: url(/src/assets/bg-mobile.svg);
+        background-repeat: no-repeat;
+
     }
+
+    .Header {
+        margin-top: 11px;
+    }
+
+    .Header img {
+        width: 34px;
+    height: 35px;
+    margin: 20px 0 0 41px;
+    }
+
     h1 {
         margin-top: 18px;
-        font-size: 22px;
+        font-size: 24px;
     }
     .Huddle {
         display: block;
          margin: 61px;
     }
     .Huddle div img {
-        width: 297px;
+        width: 300px;
         margin-left: -20px;
     }
+    .huddle_2 {
+        margin: 0;
+        width: 250px;
+        text-align: center;
+    }
+    .tittle_huddle h2, h3 {
+        font-size: 24px;
+    }
+    strong {
+        font-size: 9px;
+    }
+    button {
+        margin-top: 20px;
+        width: 180px;
+        padding: 12px;
+    }
+
 }
 
 
